--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint --config eslintrc.json source/*.js && eslint --config eslintrc.json test/*.js"
   },
   "repository": {
     "type": "git",
