--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint --config eslintrc.json source/*.js && eslint --config eslintrc.json test/*.js"
+    "lint": "eslint --config eslintrc.json source/*.js && eslint --config eslintrc.json test/*.js",
+    "build": "rollup --config",
+    "minify": "cat build/lit-web.js | squash > build/lit-web.min.js",
+    "postbuild": "npm run minify",
+    "prepublish": "npm run lint && npm run test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,5 +30,9 @@
   "bugs": {
     "url": "https://github.com/vijithassar/lit-web/issues"
   },
-  "homepage": "https://github.com/vijithassar/lit-web#readme"
+  "homepage": "https://github.com/vijithassar/lit-web#readme",
+  "devDependencies": {
+    "butternut": "^0.4.6",
+    "rollup": "^0.51.8"
+  }
 }
