--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint --config eslintrc.json source/*.js && eslint --config eslintrc.json test/*.js",
     "build": "rollup --config",
     "minify": "cat build/lit-web.js | squash > build/lit-web.min.js",
+    "check": "npm run lint && npm run test",
     "postbuild": "npm run minify",
-    "prepublish": "npm run lint && npm run test && npm run build"
+    "prepublish": "npm run check && npm run build",
+    "postinstall": "npm run check && npm run build"
   },
   "repository": {
     "type": "git",
