--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --require reify",
     "lint": "eslint --config eslintrc.json source/*.js && eslint --config eslintrc.json test/*.js",
     "build": "rollup --config",
     "minify": "cat build/lit-web.js | squash > build/lit-web.min.js",
@@ -35,6 +35,10 @@
   "homepage": "https://github.com/vijithassar/lit-web#readme",
   "devDependencies": {
     "butternut": "^0.4.6",
+    "eslint": "^4.11.0",
+    "jsdom": "^11.4.0",
+    "mocha": "^4.0.1",
+    "reify": "^0.12.3",
     "rollup": "^0.51.8"
   }
 }
